--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "normalize.css": "^8.0.1",
+    "pluralize": "^8.0.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
